name:                hacktoberfest-app
version:             0.1.0.0
synopsis:            Twitter(ish) clone
-- description:
homepage:            https://github.com/frankcash/Hacktoberfest
-- license:
author:              Frank Cash
maintainer:          cashc@acm.org
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.8

executable app
  main-is:             Main.hs
  -- other-modules:
  --other-extensions:    OverloadedStrings
  build-depends:       base ==4.6.*
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , scotty
                     , clay
                     , text
                     , bytestring
                     , blaze-html
                     , persistent ==1.3.*
                     , persistent-template ==1.3.*
                     , persistent-sqlite ==1.3.*
                     , persistent-postgresql==1.*
                     , monad-logger ==0.3.0
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
                     , HDBC
                     , HDBC-sqlite3
                     , blaze-html
                     , blaze-markup


  -- hs-source-dirs:
  default-language:    Haskell2010
